--- a/styles.css
+++ b/styles.css
@@ -7,23 +7,29 @@
 
   .navbar-brand img
   {
-width: 50%
+width:140px;
+display:flex;
+flex-wrap: wrap;
+position:absolute;
   }
 
   .navbar-brand
   {
     left:40%;
-    transform: translateX(40%);
-    top:1px;
-    position: absolute;
+    transform: translateX(-50%);
+    top:-18px;
+    position:absolute;
+
   }
   .header
-  {background-color:white;
-   }
+  {
+background-color: pink;
+  }
    .navbar
    {
-     padding: 0 35px !important;
+     padding: 0 0 !important;
      height: 120px;
+     background-color: pink;
    }
 .navbar-toggler
 {
@@ -33,25 +39,89 @@ padding:0 !important;
 margin-top:30px;
 
 }
-.main
+
+.background-image
 {
-text-align: center;
-text
+  margin: 30px 0px;
+  width:100%;
+  display: inline-block;
+
+
 }
-.background-img
-{
-  margin: 80px 115px;
-  width:60%;
+.background-image p{
+  text-align:justify;
+  word-wrap: break-word;
+  text-indent:  0 30px;
+  vertical-align: middle;
+  margin-top: 120px;
+  font-family: sans-serif;
+
 }
-.banner-img  img
+.background-image  img
  {
-   width: 100%;
+   width:20%;
    margin-bottom: -80px;
+   float:right;
+   margin-right: 120px;
+   margin-top: -110px;
  }
  .background
  {
-   position: relative;
+   position:absolute;
+  margin-top: 80px;
  }
-.baCKGROUND-title
+.background-title
 {position: absolute;
+  top:70px;
+  left:30%;
+}
+.background-title h1
+{
+font-size: 25px;
+font-style: italic;
+color: black;
+padding-left: 65px;
+margin-top: 70px;
+
+}
+
+
+.pic1
+{ position: absolute;
+
+}
+.pic2{
+  position: absolute;
+}
+.ppic1 img
+{
+  width: 30%
+}
+
+.homepage-title
+{
+  position: relative;
+  margin: 0;
+  text-align: center;
+  background:#000;
+  border-radius:0 0 50% 50%;
+  width: 100%;
+  height: 21vw;
+  justify-content: center;
+
+}
+.words
+{
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-size: 20%;
+  font-style: italic;
+  font-family: cursive;
+  text-align: center;
+  padding-top: 100px;;
+  text margin-top: inline-block;
+
+
+
 }
