--- a/styles.css
+++ b/styles.css
@@ -62,41 +62,15 @@ margin-top:30px;
    width:20%;
    margin-bottom: -80px;
    float:right;
-   margin-right: 120px;
-   margin-top: -110px;
+   margin-right: 90px;
+   margin-top: 20px;
+   padding-left: 20px;
  }
  .background
  {
    position:absolute;
   margin-top: 80px;
  }
-.background-title
-{position: absolute;
-  top:70px;
-  left:30%;
-}
-.background-title h1
-{
-font-size: 25px;
-font-style: italic;
-color: black;
-padding-left: 65px;
-margin-top: 70px;
-
-}
-
-
-.pic1
-{ position: absolute;
-
-}
-.pic2{
-  position: absolute;
-}
-.ppic1 img
-{
-  width: 30%
-}
 
 .homepage-title
 {
@@ -108,6 +82,7 @@ margin-top: 70px;
   width: 100%;
   height: 21vw;
   justify-content: center;
+  display: block;
 
 }
 .words
@@ -122,6 +97,49 @@ margin-top: 70px;
   padding-top: 100px;
   text margin-top: inline-block;
 }
+
+@media (max-width:375px)
+  {
+.navbar-brand
+{
+  display: none;
+}
+.homepage-title
+{display: contents;
+  background:#111;
+}
+.words{
+  padding-top: 0;
+}
+
+.background{
+  margin-top: 120px;
+  width:100%;
+}
+
+.background-image p{
+  text-align:justify;
+  word-wrap: break-word;
+  vertical-align: middle;
+  margin-top: 60px;
+  font-family: sans-serif;
+padding-top: 67px;
+padding-right: 50px;
+}
+  .background-image  img
+   {
+     width:35%;
+     margin-right: 120px;
+     margin-top: -75px;
+
+   }
+   .background-image
+   {
+     margin:0px 0px;
+     width:100%;
+     display: inline-block;}
+   /*---------------->end of index html-------------------*/ }
+
 .lead
 {
   font-weight:bold;
@@ -186,14 +204,14 @@ position: absolute;
 }
 .bfimage img
 {
-margin-left: 850px;
+margin-left: 750px;
   width:35%;
   margin-top: 90px;
 
 }
 .business-professional-image
 {
-  margin-bottom: 200px;
+  margin-bottom: 70px;
   position: relative;
   display: inline-block;
   width:100%;
@@ -202,7 +220,6 @@ margin-left: 850px;
 .business-professional-image img
 {
   margin: 254px -225px;
-
 
 }
 
@@ -218,5 +235,69 @@ position: absolute;
   margin-left: 90px;
   padding-bottom: 40px;
   width: 700px;
+
+}
+.business-casual-image
+{
+  margin-bottom:0px;
+  position: relative;
+  display: inline-block;
+  width:250%;
+
+}
+.business-casual-image img
+{
+  margin: -193px -593px;
+  width:100%;
+
+}
+
+.boxdiv3
+{
+  min-height: 150px;
+  padding-left: 20px;
+position: absolute;
+  background-color: #808080;
+  font-weight: 300;
+  color: black;
+  margin-top: -178px;
+  float: left;
+  padding-bottom: 40px;
+  width: 700px;
+  margin-left: -280px;
+  margin-bottom: 70px;
+
+}
+
+.casual-image
+{
+  margin-bottom:0px;
+  position: relative;
+  display: inline-block;
+  width:100px;
+
+
+}
+.casual-image img
+{
+  margin: 180px 130px;
+  width:100%;
+
+
+}
+
+.boxdiv4
+{
+  min-height: 150px;
+  padding-left: 20px;
+position: absolute;
+  background-color: #808080;
+  font-weight: 300;
+  color: black;
+  margin-top: 180px;
+  float: left;
+  padding-bottom: 40px;
+  width: 700px;
+  margin-left: 230px;
 
 }
