--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ position:absolute;
   .header
   {
 background-color: pink;
+
   }
    .navbar
    {
@@ -98,46 +99,6 @@ margin-top:30px;
   text margin-top: inline-block;
 }
 
-@media (max-width:375px)
-  {
-.navbar-brand
-{
-  display: none;
-}
-.homepage-title
-{display: contents;
-  background:#111;
-}
-.words{
-  padding-top: 0;
-}
-
-.background{
-  margin-top: 120px;
-  width:100%;
-}
-
-.background-image p{
-  text-align:justify;
-  word-wrap: break-word;
-  vertical-align: middle;
-  margin-top: 60px;
-  font-family: sans-serif;
-padding-top: 67px;
-padding-right: 50px;
-}
-  .background-image  img
-   {
-     width:35%;
-     margin-right: 120px;
-     margin-top: -75px;
-
-   }
-   .background-image
-   {
-     margin:0px 0px;
-     width:100%;
-     display: inline-block;}
    /*---------------->end of index html-------------------*/ }
 
 .lead
@@ -299,5 +260,429 @@ position: absolute;
   padding-bottom: 40px;
   width: 700px;
   margin-left: 230px;
+
+}
+html,body{
+  height: auto;
+}
+#bodybox
+{
+  overflow: auto;
+  margin-bottom:100px;
+
+}
+
+#footer{
+
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: #DCDCDC;
+   color: black;
+   text-align: center;
+}
+
+
+
+
+
+/**/
+
+
+
+
+@media (Max-width:768px) {
+  .homepage-title
+  {
+    display: contents;
+  }
+  .background{margin-top: 20px;}
+  .background-image p{
+    font-weight: 400;
+    margin-top: 195px;
+  }
+  .background-image img{
+    width:35%;
+    margin-right: 241px;
+    margin-top: -205px;
+  }
+.navbar
+{
+  width: 320%;
+}
+  .lead
+  {
+    font-weight:bold;
+    margin-top: 30px;
+    margin-left: 531px;
+    margin-right: -620px;
+  }
+  .top
+  {
+    width:100%;
+    display: block;
+    margin-right: 70px;
+    position: absolute;
+    margin-top: 20px;
+    padding-left: 20%;
+  }
+
+  .top  ol
+  {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 684px;
+    margin-right: 0px;
+    padding-left: 20%;
+    width: 60px;
+  }
+  .alert
+  {
+    margin-top: 60px;
+    margin-left: 541px;
+    margin-right: -818px;
+  }
+  .boxdiv
+  {
+    height: 280px;
+    padding-left: 20px;
+  position: absolute;
+    background-color: #F08080;
+    font-weight: 300;
+    color: black;
+    margin-top: 300px;
+    margin-left: 60px;
+    padding-bottom: 40px;
+    width: 700px;
+
+  }
+  .business-formal-image
+  {
+    position:absolute;
+   margin-top: 180px;
+   float: right;
+
+  }
+  .bfimage
+  {
+    margin: -140px -140px;
+    width:100%;
+    display: inline-block;
+    float:right;
+
+  }
+  .bfimage img
+  {
+  margin-left: 1350px;
+    width:35%;
+    margin-top: 90px;
+
+  }
+  .business-professional-image
+  {
+    margin-bottom: 70px;
+    position: relative;
+    display: inline-block;
+    width:50%;
+
+  }
+  .business-professional-image img
+  {
+    margin: 238px 235px;
+
+  }
+
+  .boxdiv2
+  {
+    min-height: 150px;
+    padding-left: 20px;
+  position: absolute;
+    background-color: #F08080;
+    font-weight: 300;
+    color: black;
+    margin-top: 290px;
+    margin-left: 1590px;
+    padding-bottom: 40px;
+    width: 700px;
+
+  }
+  .business-casual-image
+  {
+    margin-bottom:0px;
+    position: relative;
+    display: block;
+    width:88%;
+
+  }
+  .business-casual-image img
+  {
+    margin: -193px -1019px;
+    width:60%;
+
+  }
+
+  .boxdiv3
+  {
+    min-height: 150px;
+    padding-left: 20px;
+  position: absolute;
+    background-color: #808080;
+    font-weight: 300;
+    color: black;
+    margin-top: -178px;
+    float: left;
+    padding-bottom: 40px;
+    width: 700px;
+    margin-left: 58px;
+    margin-bottom: 70px;
+
+  }
+
+  .casual-image
+  {
+    margin-bottom:0px;
+    position: relative;
+    display: inline-block;
+    width:225px;
+
+
+  }
+  .casual-image img
+  {
+    margin: 448px -355px;
+    width:100%;
+
+
+  }
+
+  .boxdiv4
+  {
+    min-height: 150px;
+    padding-left: 20px;
+  position: absolute;
+    background-color: #808080;
+    font-weight: 300;
+    color: black;
+    margin-top: 640px;
+    float: left;
+    padding-bottom: 40px;
+    width: 700px;
+    margin-left: 1368px;
+
+  }
+
+}
+/**/
+
+
+
+@media screen and (max-width:375px)
+  {
+.navbar-brand
+{
+  display: none;
+}
+.homepage-title
+{display: contents;
+  background:#111;
+}
+.words{
+  padding-top: 0;
+}
+
+.background{
+  margin-top: 120px;
+  width:100%;
+}
+
+.background-image p{
+  text-align:center;
+  position:absolute;
+  word-wrap: break-word;
+  vertical-align: middle;
+  margin-top: 259px;
+  font-family: sans-serif;
+margin-left: -117px;
+}
+  .background-image  img
+   {
+     width:50%;
+     margin-right: 241px;
+     margin-top: -25px;
+
+   }
+   .background-image
+   {
+     margin:-150px 115px;
+     width:100%;
+     display:inline-grid;}
+
+     /*end of index.html*/
+     .lead
+     {
+       font-weight:bold;
+       margin-top: 10px;
+       margin-left: -60px;
+       text-align: left;
+       position: initial;
+       word-wrap: break-word;
+     }
+     .top
+     {
+       width:100%;
+       display: block;
+       margin-right: 70px;
+       position: absolute;
+       margin-top: 20px;
+       padding-left: 20%;
+     }
+
+     .top  ol
+     {
+       position: absolute;
+       list-style-type: decimal;
+       margin-top: 1em;
+       margin-bottom: 1em;
+       margin-left: 0;
+       margin-right: 0px;
+       padding-left: 20%;
+     }
+     .alert
+     {
+       margin-top: 60px;
+       margin-left: 70px;
+       margin-right: 90px;
+       width: auto;
+       text-align: center;
+     }
+     .alert h1
+     {
+       display: none;
+     }
+     .boxdiv
+     {
+       height: 480px;
+       padding-left: 20px;
+     position: absolute;
+       background-color: #F08080;
+       font-weight: 300;
+       color: black;
+       margin-top: 290px;
+       margin-left: 0px;
+       margin-bottom: 80px;
+       width: 80%;
+
+     }
+     .business-formal-image
+     {
+  display:block!important;
+       width: 10px;
+     }
+    .bfimage
+    {
+      width: 10px;
+    }
+     .bfimage img
+     {
+     margin-left: 750px;
+       width:0%;
+       margin-top: 90px;
+        display: none;
+     }
+     .business-professional-image
+     {
+       margin-bottom: 70px;
+       position: relative;
+       display: block;
+       width:10px;
+
+     }
+     .business-professional-image img
+     {
+       margin: 254px -225px;
+       display: none;
+
+     }
+
+     .boxdiv2
+     {
+       min-height: 150px;
+       padding-left: 20px;
+     position: absolute;
+       background-color: #F08080;
+       font-weight: 300;
+       color: black;
+       margin-top: 600px;
+       margin-left: 0px;
+       padding-bottom: 40px;
+       width: 300px;
+
+     }
+     .business-casual-image
+     {
+       margin-bottom:0px;
+       position: relative;
+       display: block;
+       width:250%;
+
+     }
+     .business-casual-image img
+     {
+       margin: -193px -593px;
+       width:10px;
+       display: none;
+
+     }
+
+     .boxdiv3
+     {
+       min-height: 150px;
+       padding-left: 20px;
+     position: absolute;
+       background-color: #808080;
+       font-weight: 300;
+       color: black;
+       margin-top: 1110px;
+       padding-bottom: 40px;
+       width: 300px;
+       margin-left: -10px;
+       margin-bottom: 70px;
+
+     }
+
+     .casual-image
+     {
+       margin-bottom:0px;
+       position: relative;
+       display: block;
+       width:10px;
+
+
+     }
+     .casual-image img
+     {
+       margin: 180px 130px;
+       width:10px;
+       display: none;
+
+
+     }
+
+     .boxdiv4
+     {
+       min-height: 150px;
+       padding-left: 20px;
+     position: absolute;
+       background-color: #808080;
+       font-weight: 300;
+       color: black;
+       margin-top: 1600px;
+       padding-bottom: 40px;
+       width: 700px;
+       margin-left: -20px;
+       width: 300px;
+
+     }
 
 }
